--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -438,7 +438,7 @@
                     <div class="gParrafo">
                         {{cat.description|safe}}
                     </div>
-                    <a href="#" class="button">Votar</a>
+                    <a class="button">Votar</a>
                 </div>
             {% endfor %}
 
