--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -10,23 +10,33 @@
 
 
 <section class="b1 scrollWrap">
-    {% if company.video_file %}
+    {% if home_page.video_file %}
         <video width="640" height="360" autoplay loop muted>
-            <source src="{{company.video_file.url}}" type="video/mp4">
+            <source src="{{home_page.video_file.url}}" type="video/mp4">
         </video>
     {% else %}
-        <picture class="imgCover">
-            <source srcset="{{company.mobile_banner.url}}" media="(max-width: 767px)">
-            <source srcset="{{company.banner.url}}" media="(max-width: 768px)">
-            <img src="{{company.banner.url}}" width="1920" height="713"  alt="Myimage">
-        </picture>
+        {% if home_page.banner_link %}
+            <a href="{{home_page.banner_link}}" target="_blank">
+                <picture class="imgCover">
+                    <source srcset="{{home_page.mobile_banner.url}}" media="(max-width: 767px)">
+                    <source srcset="{{home_page.banner.url}}" media="(max-width: 768px)">
+                    <img src="{{home_page.banner.url}}" width="1920" height="713"  alt="Myimage">
+                </picture>
+            </a>
+        {% else %}
+            <picture class="imgCover">
+                <source srcset="{{home_page.mobile_banner.url}}" media="(max-width: 767px)">
+                <source srcset="{{home_page.banner.url}}" media="(max-width: 768px)">
+                <img src="{{home_page.banner.url}}" width="1920" height="713"  alt="Myimage">
+            </picture>
+        {% endif %}
     {% endif %}
     <div class="grilla f center jcfs">
         <div class="b1Info top">
             <h2 class="scrollItem">{{home_page.first_title|default:""}}</h2>
             <h1 class="scrollItem">{{home_page.main_title|default:""}}</h1>
             <h3 class="scrollItem">{{home_page.secondary_title|default:""}}</h3>
-            {% if home_page.home_video_url and not company.video_file %}
+            {% if home_page.home_video_url and not home_page.video_file %}
                 <a href="#" class="clickVideo popup scrollItem" data-urlvideo="{{home_page.home_video_url}}">
                     <span style="color:{{home_page.text_buttons_color}};">Ver video</span>
                     <!-- linea circular animada administrable -->
@@ -78,7 +88,7 @@
 
 {% if header_section.show_about_section %}
 <section class="b3 f aic jcsb scrollWrap anclaBlock" id="acerca">
-    <div class="b3Left f aifs jcfs scrollItem">
+    <div class="b3Left f aifs jcfs scrollItem" style="background: {{company.section_color}} !important;">
         <div class="b3ContentLeft">
             <h3 class="gTitle">{{home_page.main_event_title}}</h3>
             <div class="gParrafo">
@@ -191,7 +201,7 @@
             </div>
         </div>
         <div class="b4ContentWrap scrollItem {% if not company.use_filters %}hideFilterLeft{% endif %}">
-            <div class="b4FilterLeft">
+            <div class="b4FilterLeft" style="background: {{company.section_color}} !important;">
                 <h3>Filtros</h6>
                 <div class="b4FilterItemInfo">
                     <ul>
@@ -269,7 +279,9 @@
                                         {% endif %}
                                     {% endif %}
                                     {% if schedule.get_current_status == 'past' and schedule.video_url %}
-                                        <a href="#" class="b4VolverVer clickVideo b4ButtonRelative popup" data-urlvideo="{{schedule.video_url}}">Volver a ver</a>
+                                        <a href="#" class="b4VolverVer clickVideo b4ButtonRelative popup" data-urlvideo="{{schedule.video_url}}" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};">
+                                            Volver a ver
+                                        </a>
                                     {% endif %}
                                 {% endif %}
                                </div>
@@ -313,7 +325,7 @@
                         </div>
                     </div>
                     {% else %}
-                        <div class="b4Break">
+                        <div class="b4Break" style="background: {{company.section_color}} !important;">
                             <h3>{{schedule.start_time}} - {{schedule.end_time}} <span>{{schedule.name}}</span></h3>
                         </div>
                     {% endif %}
@@ -339,7 +351,9 @@
             <h4 class="b4PopupCargo"></h4>
             <div class="gParrafo b4PopupText">
             </div>
-            <a href="#" target="_blank" class="b4linkedin"><img src="/static/web/img/arrow.svg" alt="" width="12"></a>
+            <a href="#" target="_blank" class="b4linkedin"
+            style="background: {{company.button_color}} !important;color: {{company.button_text_color}};">">
+                <img src="/static/web/img/arrow.svg" alt="" width="12"></a>
         </div>
     </div>
 </div>
@@ -436,13 +450,13 @@
         </div>
         <div class="b23Wrap">
             {% for cat in vote_categories %}
-                <div class="b23Item">
+                <div class="b23Item" style="background: {{company.section_color}} !important;">
                     <p class="name">{{cat.name}}</p>
                     <div class="gParrafo">
                         {{cat.description|safe}}
                     </div>
                     <div class="b23Bottom f aic jcfs">
-                        <a href="#" class="button button_vote" data-id="{{cat.id}}">Votar</a>
+                        <a href="#" class="button button_vote" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};" data-id="{{cat.id}}">Votar</a>
                         <p class="message_vote" id="msg_{{cat.id}}">Aún no están abiertas las votaciones</p>
                     </div>
                 </div>
@@ -512,7 +526,7 @@
 {% if header_section.show_networking_section %}
     {% if logged_user %}
         <section class="b16 anclaBlock" id="networking">
-            <div class="grilla">
+            <div class="grilla" style="background: {{company.section_color}} !important;">
                 <h3 class="gTitle">{{home_page.networking_section_name}}</h3>
                 {% if company_user.allow_networking %}
                     <div class="gParrafo">
@@ -523,7 +537,7 @@
                     <div class="gParrafo">
                         <p>¿Autorizas compartir tu información de contacto con el resto de los asistentes?</p>
                     </div>
-                    <a href="#" class="gButton b16OpenPopup">Si, continuar</a>
+                    <a href="#" class="gButton b16OpenPopup" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};">Si, continuar</a>
                 {% endif %}
             </div>
         </section>
@@ -536,13 +550,13 @@
                     <p>Confirma que desea compartir sus datos con los demás asistentes del evento.</p>
                 </div>
                 <div class="b16Buttons">
-                    <a href="#" class="gButton b16AceptNet">Aceptar</a>
-                    <a href="#" class="gButton b16CancelNet">Cancelar</a>
+                    <a href="#" class="gButton b16AceptNet" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};">Aceptar</a>
+                    <a href="#" class="gButton b16CancelNet" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};">Cancelar</a>
                 </div>
             </div>
         </div>
     {% else %}
-        <section class="b16 anclaBlock" id="networking">
+        <section class="b16 anclaBlock" style="background: {{company.section_color}} !important;" id="networking">
             <div class="grilla">
                 <h3 class="gTitle">{{home_page.networking_section_name}}</h3>
                 <div class="gParrafo">
