--- a/src/templates/landing/reset-password.html
+++ b/src/templates/landing/reset-password.html
@@ -31,8 +31,8 @@
 					<span>Confirmar Contraseña</span>
 					<input type="password" class="g8Box validate[required,equals[password]]"  name="{{form.new_password2.html_name}}">
 				</div>
-                <button type="submit">Guardar</button>
-                <a href="{% url 'landing:home' %}" class="g8LinkForm">Regresar</a>
+                <button type="submit" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};">Guardar</button>
+                <a href="{% url 'landing:home' %}" class="g8LinkForm" style="color: {{company.button_color}};">Regresar</a>
             </form>
         </div>
     </div>
