Fix text for ticket

--- a/src/templates/landing/ticket_view.html
+++ b/src/templates/landing/ticket_view.html
@@ -13,7 +13,7 @@
             <div class="b15Left">
                 <h1 class="gTitle">E-Ticket</h1>
                 <h2>¡Tu e-ticket se creó con éxito!</h2>
-                <h3>Presenta tu invitación el dia del evento</h3>
+                <h3>Presenta tu invitación el día del evento</h3>
             </div>
             <div class="b15RightContent">
                 <div class="b15Right f aic jcsb">
