Fix color for form

--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -102,7 +102,7 @@
         <div class="g8Bottom gParrafo login-message-warning">
         </div>
         <div class="g8Bottom">
-            <a class="return-login-form" href="#" style="background: {{company.button_color}} !important;color: {{company.button_text_color}};"><- Regresar</a>
+            <a class="return-login-form" href="#" style="color: {{company.button_color}};"><- Regresar</a>
         </div>
     </div>
     <div class="g8Form login-form">
