--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -27,6 +27,9 @@
                 {% if header_section.show_exhibitors_section %}
                 <a href="#expositor" class="headerAnclaBlock" style="color:{{header_section.header_text_color}};">{{header_section.exhibitors_header_name}} <span class="lineActive" style="background:{{header_section.button_color}};"></span></a>
                 {% endif %}
+                {% if header_section.show_communities_section %}
+                    <a href="#community" class="headerAnclaBlock" style="color:{{header_section.header_text_color}};">{{header_section.communities_header_name}}<span class="lineActive" style="background:{{header_section.button_color}};"></span></a>
+                {% endif %}
                 {% if header_section.show_vote_section %}
                     <a href="#votacion" class="headerAnclaBlock" style="color:{{header_section.header_text_color}};">{{header_section.vote_header_name}}<span class="lineActive" style="background:{{header_section.button_color}};"></span></a>
                 {% endif %}
